scss/styles.scss
@use "./partials/mixins";
@use "./partials/variables" as v;

// Font and links

// Adding more projects and make the whole page more exciting over time

h1 h2 h3 h4 h5 h6 {
  font-family: Helvetica, sans-serif;
}

p {
  font-family: garamond;
}

.content {
  @include mixins.flex-display(column, center, center, nowrap);
}

// Nav Bar
.navBar {
  @include mixins.flex-display(row, flex-start, center, nowrap);
  width: 100%;
  background-color: v.$text-color;
  // Keeps the navBar at the top of the screen
  position: fixed;
  top: 0;

  &--list {
    list-style: none;
    &-item {
      padding: 10px;
      &-link {
        font-size: 1.2em;
        text-decoration: none;
        color: black;
        &:hover {
          color: blue;
          text-decoration: underline;
          letter-spacing: 0.5px;
        }
      }
    }

    @include mixins.flex-display(row, flex-start, center, nowrap);
  }
}

// Landing section
.landing {
  background-color: v.$background-color2;
  @include mixins.flex-display(column, center, center, nowrap);
  text-align: center;
  // Handles Text for the landing section
  &--title {
    color: v.$text-color;
    font-size: 4.5em;
    margin: 15px;
  }

  &--subTitle {
    color: v.$text-color;
    font-size: 3em;
    margin: 10px;
  }
}

// Page Block
.page-block {
  min-height: 100vh;
  width: 100%;
}

// Skills section
.skills {
  color: v.$text-color;
  background-color: v.$background-color1;
  @include mixins.flex-display(column, center, center);
  // Handles the cards in the skills section
  &-card {
    margin: 10px;

    @include mixins.flex-display(column, center, center);
    // When screen too small only have column
    @include mixins.sm-screen {
      @include mixins.flex-display(row, center, flex-start, wrap);
    }

    // Handles items in skills-card
    &--item {
      @include mixins.flex-display(row, center, flex-start, nowrap);
      // Handles items in skills-card--item
      &-text {
        font-size: 2em;
        padding: 10px;
      }
    }
  }

  &-heading {
    font-size: 2.4em;
  }
}

// Fix the issue with the size of the card making it weird on smaller screens
// Projects section
.projects {
  @include mixins.flex-display(column, center, center, wrap);
  color: v.$text-color;
  background-color: v.$background-color2;

  // Handles the cards in the projects section
  &-card {
    // When screen too small only have column
    @include mixins.flex-display(column, center, center);
    @include mixins.md-screen {
      @include mixins.flex-display(row, center, center, wrap);
    }
    // Handles items in projects-card
    &--item {
      width: 300px;
      height: 300px;
      @include mixins.flex-display(column, center, center);

      @include mixins.md-screen {
        @include mixins.flex-display(row, center, center, wrap);
        margin: 5px;
        width: 600px;
      }
      // Handles Images for the projects-card--item
      &-img {
        @include mixins.md-screen {
          align-self: flex-start;
        }
        margin: 3px;
        width: 300px;
        height: 270px;
      }
      // Handles Links for the projects-card--item
      &-link {
        margin: 10px;
        padding: 5px;
        color: v.$link-color;
        text-decoration: none;
        &:hover {
          text-decoration: underline;
          letter-spacing: 0.5px;
        }
      }
      // Handles Text for the projects-card--item
      text-align: center;
      &-header {
        font-size: 1.2em;
        text-decoration: underline;
      }

      &-text {
        max-width: 280px;
        margin: 3px;
        //If the screen is too small, dont display the text
        display: none;
        @include mixins.md-screen {
          display: block;
        }
      }
    }
  }

  &-heading {
    font-size: 2em;
  }
}

// About Section
.about {
  color: v.$text-color;
  background-color: v.$background-color1;
  // if screen too small, column
  @include mixins.flex-display(row, center, center);

  //Handles the about_group
  &_group {
    margin-top: 10px;
    @include mixins.flex-display(column, center, center);

    @include mixins.lg-screen {
      @include mixins.flex-display(row, center, center);
    }
  }
  // Handles the about-me section
  &-me {
    margin-top: 10px;
    @include mixins.flex-display(column, center, center);
    // Handles the item inside about-me
    &--item {
      @include mixins.flex-display(column, center, center);

      @include mixins.md-screen {
        @include mixins.flex-display(row, center, center);
      }

      // Handles the img inside the about-me--item
      &-img {
        width: 200px;
        height: 300px;
      }
      // Handles the text for the about section
      &-text {
        @include mixins.flex-display(column, space-evenly, center);
        // Handles the P tags inside the text area
        & p {
          text-align: center;
          //margin
        }
        margin: 10px;
        width: 400px;
        height: 300px;
        font-size: 1.2em;
      }
    }
    // Handles the heading inside of about-me
    &-heading {
      margin: 10px;
      margin-top: 20px;
      font-size: 2em;
    }
  }

  // Handles the credits inside of about
  &_credits {
    text-align: right;
    width: 100%;
    // position: absolute;
    // bottom: 1;
    // right: 1;
  }
}

// Contact Section
.contact {
  color: v.$text-color;
  @include mixins.flex-display(column, space-evenly, center);
  width: 300px;
  height: 350px;
  // Handles the contact-card
  &-card {
    @include mixins.flex-display(column, center, center);
    // Handles the contact-card--item
    &--item {
      // Handles the contact-card--item-text
      &-text {
        margin: 5px;
        font-size: 1.2em;
        //targets all a tags inside of the text area (allows for text color change of the links)
        & a {
          color: v.$link-color;
          text-decoration: none;
          &:hover {
            letter-spacing: 0.5px;
            text-decoration: underline;
          }
        }
      }
    }
  }
  // Handles the contact-heading
  &-heading {
    font-size: 2em;
  }
}

* {
  scroll-behavior: smooth;
  margin: 0;
}

